static/gsources/gs.css
:root {
    --clr-text: #bbb;
    --clr-bg: #0d0f19;
    --clr-bg2: #151929;
    --clr-primary: #3560ee;
    --clr-secondary: #191f35;
    --clr-accent: #05ff93;

    --main-height: 250px;
    --main-width: 800px;
    --footer-height: 42px;

    --font-big: 46px;
    --font-med: calc(var(--font-big) * 0.7);
    --font-normal: 20px;
    --font-small: 13px;
    --font: 'notosans', sans-serif;
    --font2: 'zillaslab', 'Times New Roman', Times, serif;
    --title-outline: 2.5px;
    --title-radius: 0.5px;
    --title-color: var(--clr-accent);
    --title-color2: var(--clr-bg);

    --m: 20px;
    --m2: calc(var(--m) / 2);
    --gap: calc(var(--m) / 4);
    --nb-height: 64px;

    --post-item-border: 2px;
}

h1, h2, h3, h4, h5 { font-family: var(--font2); font-weight: 500; }
h1 {font-size: var(--font-big)}
h2 {font-size: calc(var(--font-big) * 0.85)}
h3 {font-size: calc(var(--font-big) * 0.7)}
h4 {font-size: calc(var(--font-big) * 0.5)}
h5 {font-size: calc(var(--font-big) * 0.4)}
small {font-size: var(--font-small)}
b { font-weight: 700; }

body {
    font-size: var(--font-normal);
    font-weight: 100;
    font-family: var(--font);
    margin: 0;
    color: var(--clr-text);
    background-color: var(--clr-bg);
}

main {
    margin-top: calc(var(--font-big) * 2);
    max-width: var(--main-width);
    margin-left: auto;
    margin-right: auto;
    min-height: calc(100vh - var(--footer-height));
    padding: var(--m);
}
main > p {margin: var(--m2);}

::selection { background: var(--clr-accent); color: var(--clr-secondary); }
strong {
    font-weight: 900;
    letter-spacing: -0.04rem;
}

a {
    font-family: var(--font2);
	color: var(--clr-text);
	font-weight: bold;
    text-decoration: none;
    text-decoration-color: var(--clr-bg);
    text-decoration-thickness: 0;
    transition: 0.5s;
}
a:hover {
    text-decoration: underline;
    text-decoration-thickness: var(--gap);
    text-decoration-color: var(--clr-accent);
    color: var(--clr-accent);
}

a[href*='https://']:after { content: url('x.svg'); margin-left: var(--gap); }
a[href*='https://']:hover:after { content: url('x_hover.svg'); }

ol { padding-left: var(--font-big); }
ul { padding-left: var(--font-normal); }
li::marker { font-family: var(--font2); font-size: var(--font-normal); }

code {
    font-family: var(--font2);
    background: var(--clr-secondary);
    border-radius: var(--gap);
    padding: 0 var(--gap) 0 var(--gap);
}

.main_content,
.main_box { padding: var(--m); }
.main_box { padding-top: var(--m); }

.main_title,
.main_names {
	left: var(--logo-size);
    position: relative;
    font-size: var(--font-big);
    margin: 0px;
}

.main_title {font-weight: normal;}

.main_content { color: var(--clr-text); padding: var(--m); }

.nb {
    display: flex;
    width: 100%;
    /* min-height: var(--nb-height); */
    background: var(--clr-secondary);
    opacity: 0.2;
    position:fixed;
    z-index: 1337;
    transition:all 0.3s ease;
    top: 0;
}
.nb:hover {
    opacity: 0.8;
    border-bottom: 2px solid var(--clr-accent);
    /* box-shadow: 0 3px 10px #00000099; */
}
.nb_container {
    display:flex;
    flex-basis:auto;
    flex-direction: row;
    margin-left: auto;
    margin-right: auto;
    padding: var(--m2);
    width: var(--main-width);
}
.nb_title {
    margin: 0;
    z-index: 1338;
    color: var(--title-color);
    text-shadow:
        var(--title-outline) var(--title-outline) var(--title-radius) var(--title-color2),
        calc(var(--title-outline) * 2) 0 var(--title-radius) var(--title-color2),
        calc(var(--title-outline) * -2) 0 var(--title-radius) var(--title-color2),
        var(--title-outline) calc(var(--title-outline) * -1) var(--title-radius) var(--title-color2),
        calc(var(--title-outline) * -1) var(--title-outline) var(--title-radius) var(--title-color2),
        calc(var(--title-outline) * -1) calc(var(--title-outline) * -1) var(--title-radius) var(--title-color2)
    ;
}
.nb_list {
    flex-direction:row;
    display: flex;
    list-style: none;
    align-self: center;
    margin: 0;
    margin-left: auto;
    z-index: 1337;
}
.nb_item {
    padding-right:.5rem;
    padding-left:.5rem
}
.nb_btn {
    padding: 0;
    background-color:transparent;
    cursor: pointer;
    border: none;
    margin-left: auto;
    display: none;
    /* color: var(--clr-text); */
    font-size: var(--font-normal);
    font-family: var(--font);
    line-height:1;
    /* border-radius:8px; */
    /* align-self: flex-end; */
    /* outline: none; */
}
.nb_btn_icon {
    width: var(--font-big);
    height: var(--font-big);
    background-image: url('menu.svg');
}
.nb_btn_icon_x {
    background-image: url('menux.svg');
}

.content_head { display: flex; margin: var(--m2); }

.content_head > span {
    font-family: var(--font2);
    font-size: var(--font-big);
    margin: 0 0 var(--m) 0; }
.content_date {
    margin-left: auto;
    font-family: var(--font2);
    font-size: var(--font-normal);
    font-weight: normal;
}
.content_body {
    background: var(--clr-bg2);
    border-radius: var(--m2);
    padding: var(--m2);
}
.content_body > p { margin-top: 0;}


.post_list_item {
    position: relative;
    cursor:pointer;
    background-color: transparent;
    border: var(--post-item-border) solid var(--clr-secondary);
    border-radius: var(--m2);
    margin-bottom: var(--m2);
    transition: 0.2s;
    padding: var(--m2);
    /* padding-top: var(--m); */
    padding-bottom: var(--m2);
    display: flex;
}
.post_list_item:hover {
    background-color: var(--clr-secondary);
    color: var(--clr-accent);
    border-bottom: var(--gap) solid var(--clr-accent);
    /* padding-top: var(--m2); */
    padding-bottom: calc(var(--gap) + var(--post-item-border));
}
.post_list_item > span:first-child {
    font-family: var(--font2);
    font-size: var(--font-med);
    margin: 0 0 var(--m) 0;
}
.post_list_item > a:last-of-type {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    text-indent: -9999px;
    overflow: hidden;
    z-index: 23;
}
.post-tag {
    z-index: 42;
    background-color: var(--clr-text);
    color: var(--clr-bg);
    font-family: var(--font2);
    border-radius: var(--gap);
    padding: 0 var(--gap) 0 var(--gap);
    margin-left: var(--gap);
    height: calc(var(--font-normal) + var(--gap));
}
.post-tag:hover {
    background-color: var(--clr-accent);
    color: black;
    text-decoration: none;
}
.post-tag > span:last-of-type {
    font-size: var(--font-small);
    font-family: var(--font);
    font-weight: 100;
}
.post-github {
    content: "" !important;
    margin-left: var(--gap);
}


footer {
    position: relative;
    bottom: 0;
    max-width: var(--main-width);
    margin-left: auto;
    margin-right: auto;
    padding: var(--m);
    background-color: calc(var(--clr-bg) * 0.5);
    transition:all 0.3s ease;
    opacity: 0.4;
}
footer:hover { opacity: 1.0; }
footer > ul {
    justify-content: space-evenly;
    flex-direction: row;
    display: flex;
    list-style: none;
    padding: 0;
}

@font-face {
    font-family: zillaslab;
    font-display: swap;
    src: url('ZillaSlab-Regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: zillaslab;
    font-display: swap;
    src: url('ZillaSlab-Bold.woff2') format('woff2');
    font-weight: bold;
    font-style: normal;
}
@font-face {
    font-family: notosans;
    font-display: swap;
    src: url('noto_sans.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

@media screen and (max-width: 800px) {
    * {
        --m: 30px;
        --font-big: 8vw;
        --font-normal: 4vw;
        --font-small: 3vw;
    }
    main { padding: var(--m2); padding-top: var(--m);}
    .nb { opacity: 0.8; }
    .nb_btn { display: inherit; }
    .nb_list { flex-direction:column; display: none; }
    .nb_list_x {
        display: block !important;
        position: absolute;
        right: 0;
        font-size: var(--font-big);
        top: calc(var(--font-big) * 1.5);
        background: var(--clr-secondary);
        padding: var(--font-normal);
    }
}

